[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mola-treelab"
version = "0.0.1"
authors = [
  { name="Luis Bernardos", email="luisfco.bernardos@gmail.com" },
  { name="Thomas Bontemps", email="thomas.bontemps@hotmail.fr" }
]
description = "MOLA-treelab is an ONERA code that implements an interface to CGNS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.21.0",
  "h5py>=3.7.0",
  "matplotlib>=3.7.0",
  "pyqt5>=5.15.9",
]

[project.urls]
Homepage = "https://github.com/onera/MOLA"
Issues = "https://github.com/onera/MOLA/issues"

[project.gui-scripts]
treelab = "treelab.gui.main:launch"

[tool.hatch.build.targets.wheel]
packages = ["src/treelab"]

# [project.scripts]
# treelab = "treelab.gui.main:launch"

# [tool.hatch.build.targets.sdist.force-include]
# "src/treelab/bin" = "treelab/bin"

# [tool.hatch.build.targets.wheel.force-include]
# "src/treelab/bin" = "treelab/bin"